minor tweaks, swagger now reflects refractoring
